--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Navigation_Drawer"
         tools:targetApi="31">
         <activity
+            android:name=".SurgicalProceduresDescriptions"
+            android:exported="false"
+            android:theme="@style/Theme.Navigation_Drawer" />
+        <activity
             android:name=".NonSurgicalProceduresFinal"
             android:exported="false" />
         <activity
