Navigation drawer maps and about us I have implemented 2 classes for AboutUsActivity and MapsActivity. I have also connected them with MainActivity navigation drawer and declared them in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AboutUsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AccountActivity"
             android:exported="false" />
         <activity
