Current location of the user and clinics in Graz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
-            android:name=".MapsActivity"
+            android:name=".Maps.MapsActivity"
             android:exported="false" />
         <activity
             android:name=".AboutUsActivity"
