--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,14 @@
         tools:targetApi="31">
         <activity android:name=".Message.Message" />
         <activity
-            android:name=".SurgicalProceduresDescriptions"
+            android:name=".SurgicalProcedures.SurgicalProceduresDescriptions"
             android:exported="false"
             android:theme="@style/Theme.Navigation_Drawer" />
         <activity
-            android:name=".NonSurgicalProceduresDescriptions"
+            android:name=".NonSurgicalProcedures.NonSurgicalProceduresDescriptions"
             android:exported="false" />
         <activity
-            android:name=".SurgicalProceduresFinal"
+            android:name=".SurgicalProcedures.SurgicalProceduresFinal"
             android:exported="false" />
         <activity
             android:name=".LoginscreenActivity"
